fix(module): remove bottom spacing, align blockquote centered

--- a/src/templates/module_19_quoteimage/styles.less
+++ b/src/templates/module_19_quoteimage/styles.less
@@ -48,9 +48,10 @@
 		}
 
 		.quote {
+			align-self: center;
+ 			z-index: 1;
 			margin: 0;
-			padding: @s2-moduleGap-l-2 @s2-moduleGap-l-2 0;
-			z-index: 1;
+			padding: 0 @s2-moduleGap-l-2;
 		}
 		.teaser {
 			margin: @s2-moduleGap-l-1 0 0 0;
